Infrastructure/k8s/recycoin-web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: recycoin-web
  namespace: ecosystem
  labels:
    app: recycoin-web
spec:
  type: ClusterIP
  selector:
    app: recycoin-web
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
