Infrastructure/k8s/recycoin-web/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: recycoin-web
  namespace: ecosystem
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - recycoin.net
        - www.recycoin.net
      secretName: recycoin-web-tls
  rules:
    - host: recycoin.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: recycoin-web
                port:
                  number: 80
    - host: www.recycoin.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: recycoin-web
                port:
                  number: 80
